--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@bhplugin/vue3-datatable": "^1.1.4",
         "flowbite": "^2.4.1",
-        "flowbite-vue": "^0.1.5"
+        "flowbite-vue": "^0.1.5",
+        "vee-validate": "^4.13.2",
+        "yup": "^1.4.0"
     }
 }
