--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "flowbite-vue": "^0.1.5",
         "pinia": "^2.2.0",
         "vee-validate": "^4.13.2",
+        "vue-toastification": "^2.0.0-rc.5",
         "yup": "^1.4.0"
     }
 }
